code upgraded to java 16